Migrate assets to cloudinary

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         -->
         <section class="hero" id="home">
             <div class="video-overlay"></div>
-            <video class="hero-video" autoplay muted loop poster="./assets/images/hero-img.png">
-                <source src="./assets/video/hero-video.mp4" type="video/mp4">
+            <video class="hero-video" autoplay muted loop poster="https://res.cloudinary.com/dkznriytt/image/upload/v1737053944/web0015-travel/j0kp64ksbdnvajv25om2.png">
+                <source src="https://res.cloudinary.com/dkznriytt/video/upload/v1737054165/web0015-travel/mcy3ydvkfyizx752o1ma.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="content container">
@@ -269,31 +269,31 @@
 
                     <li class="gallery-item">
                         <figure class="gallery-image">
-                            <img src="./assets/images/gallery-1.jpg" alt="Gallery image">
+                            <img src="https://res.cloudinary.com/dkznriytt/image/upload/v1737053362/gallery-1_c8demd.jpg" alt="Gallery image">
                         </figure>
                     </li>
 
                     <li class="gallery-item">
                         <figure class="gallery-image">
-                            <img src="./assets/images/gallery-2.jpeg" alt="Gallery image">
+                            <img src="https://res.cloudinary.com/dkznriytt/image/upload/v1737053362/gallery-2_psqxls.jpg" alt="Gallery image">
                         </figure>
                     </li>
 
                     <li class="gallery-item">
                         <figure class="gallery-image">
-                            <img src="./assets/images/gallery-3.jpeg" alt="Gallery image">
+                            <img src="https://res.cloudinary.com/dkznriytt/image/upload/v1737053362/gallery-3_xtikmh.jpg" alt="Gallery image">
                         </figure>
                     </li>
 
                     <li class="gallery-item">
                         <figure class="gallery-image">
-                            <img src="./assets/images/gallery-4.jpg" alt="Gallery image">
+                            <img src="https://res.cloudinary.com/dkznriytt/image/upload/v1737053362/gallery-4_swiov8.jpg" alt="Gallery image">
                         </figure>
                     </li>
 
                     <li class="gallery-item">
                         <figure class="gallery-image">
-                            <img src="./assets/images/gallery-5.jpg" alt="Gallery image">
+                            <img src="https://res.cloudinary.com/dkznriytt/image/upload/v1737054010/web0015-travel/yuogce2z72fmcjhfqvgs.jpg" alt="Gallery image">
                         </figure>
                     </li>
 
