--- a/index.html
+++ b/index.html
@@ -686,20 +686,20 @@
 
             <div class="footer-brand">
 
-                <a href="#" class="logo">
+                <a href="#" class="logo" style="margin: 5% 20%;">
                     <img src="./assets/images/logo.png" alt="logo">
                 </a>
 
-                <p class="footer-text">
-                    Gangawata Tours offers unforgettable journeys across Sri Lanka, blending local expertise with
-                    personalized service. Explore pristine beaches, wildlife safaris, and historical landmarks with us,
-                    where each trip is crafted to inspire and delight.
-                </p>
 
             </div>
 
             <div class="footer-contact">
 
+                <p class="footer-text" style="text-align: justify">
+                    Gangawata Tours offers unforgettable journeys across Sri Lanka, blending local expertise with
+                    personalized service. Explore pristine beaches, wildlife safaris, and historical landmarks with us,
+                    where each trip is crafted to inspire and delight.
+                </p>
             </div>
 
             <div class="footer-contact">
